# SamplesWorld

./: .gitignore  LICENSE  README.md  gccscript.sh  llvmscript.sh
ComplexCudaOpenGl/: CMakeLists.txt  main.cpp  snippets
CudaGlInterop/: HelloTextureDevicePointers.cu  HelloTextureSurface.cu  HelloVerticeInteraction.cu
CudaGlInterop/glad/: CMakeLists.txt
CudaTemplateLib/: a.out  build.sh  complete.cpp  test.cu  test.h  test_template.h  tester  tt.cu
HelloACC/: CMakeLists.txt  HelloACC.c
HelloCL_C/: CMakeLists.txt  HelloCL.c  kernel.cl
HelloCL_CPP/: CMakeLists.txt  HelloCL.cpp
HelloCppMove/: CMakeLists.txt  CppMove.cpp  CppMove.hpp  app1.cpp  app2.cpp  app3.cpp
HelloCppOptional/: CMakeLists.txt  app1.cpp
HelloCudaGlInterop/: CMakeLists.txt  HelloPixelBufferInteraction.cu  HelloTextureDevicePointers.cu  HelloTextureSurface.cu  HelloVerticeInteraction.cu
HelloCudaGlInterop/glad/src/: glad.c
HelloEigen/: CMakeLists.txt  main.cpp
HelloGLCUDAinterop/: CMakeLists.txt  HelloGlCudaInterop.cu
HelloGLCUDAinterop/TextureWithDevPtr/: CMakeLists.txt  HelloGlCudaInterop.cu
HelloGLCUDAinterop/TextureWithSurface/: HelloGlCudaInterop.cu
HelloGLCUDAinterop/VerticeInteraction/: HelloGlCudaInterop.cu
HelloGLFW/: CMakeLists.txt  HelloGLFW.c  HelloGLFW.cpp  glfwOffScreenTest.cpp
HelloGLFW/cmake/modules/: FindGLFW3.cmake
HelloGraphics/: CMakeLists.txt  FragmentShaderSimple.glsl  HelloModernGl.cpp  HelloPixelBufferInteraction.cu  HelloTexture.cpp  HelloTextureDevicePointers.cu  HelloTextureInteraction.cu  HelloTextureInteractionSurface.cu  HelloTextureSurface.cu  HelloVerticeInteraction.cu  README.md  VertexShaderSimple.glsl  lena.pgm  lena.ppm
HelloGraphics/glad/include/glad/: glad.h
HelloGraphics/glad/src/: glad.c
HelloGraphics/shaders/: FragmentColorShader.glsl  FragmentTextureShader.glsl  VertexShader.glsl
HelloMP/: CMakeLists.txt  HelloMP.c
HelloMPI/: CMakeLists.txt  HelloMPI.c
HelloPThreads/: CMakeLists.txt  HelloPosixThreads.c
HelloPytorch/: firstTest.py  main.py
HelloSSL/: CMakeLists.txt  HelloMD5.c
HelloTemplateLib/: CMakeLIsts.txt
HelloTemplateLib/lib/: mylib.cpp  mylib.hpp  mylib_template.hpp
HelloTemplateLib/test/: CMakeLists.txt  mylib.hpp  mytest.cpp
HelloTensorRT/: CMakeLists.txt  HelloCaffeImport.cpp  HelloTensorRT.cpp
